fixed spacing between social icons

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -244,7 +244,7 @@ span.blue {
 #social_ctn a {
 	display:inline-block;
 	height:36px;
-	margin:0px -3px 0px 0px;
+	margin:0px -4px 0px 0px;
 	width:42px;
 }
 #social_ctn img {
